# QFM

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml  readme.ja.md  readme.md  readme.zh-CN.md  requirements.txt
data/: data.jsonl
docs/: readme.ja.md  readme.zh-CN.md  walkthrough.ipynb
src/qfm/: config.py  dataset.py  model_moe.py  utils.py
src/qfm/core/: logger.py
src/qfm/engine/: inference.py  preprocess.py  trainer.py
tests/: inspect_model.py  test_lib.py  test_setup.py
