[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qfm"
version = "0.1.0"
description = "Quantum Flow Matching MVP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # === 深度学习基础框架 ===
    "torch==2.5.1",
    "torchvision==0.20.1",
    "lightning>=2.4.0",
    "ema-pytorch",
    "numpy>=1.26.0,<2.3.0",

    # === 模型与数据处理 ===
    "transformers>=4.44.0",
    "diffusers>=0.30.0",
    "accelerate>=0.34.0",
    "safetensors>=0.4.5",
    "pillow>=10.4.0",
    "tqdm>=4.66.0",


    # === 代码质量 ===
    "pre-commit"
]

[project.optional-dependencies]
gpu = [
    "packaging",
    "ninja",
    "flash-attn>=2.0.0",
    "deepspeed>=0.10.0",
]

[tool.setuptools.packages.find]
where = ["src"]

# === Ruff 配置 ===
[tool.ruff]
line-length = 120  # 单行最大字符数
exclude = [".git", "__pycache__", "build", "dist"]  # 排除的文件

[tool.ruff.lint]
select = ["E", "F", "I", "B"]  # 开启的规则: E (Pycodestyle错误), F (Pyflakes), I (Import排序), B (flake8-bugbear)
[tool.ruff.lint.isort]
known-first-party = ["qfm"]  # 确保 import 排序时能够正确识别你的本地项目 qfm
